# entity-core-keystone

./: .gitignore  AGENTS.md  CANONICAL-DOCS.toml  CONFORMANCE-MATRIX.md  Makefile  README.md
containers/: README.md
containers/ada-toolchain/: Containerfile
containers/base/: Containerfile
containers/beam/: Containerfile
containers/c-toolchain/: Containerfile
containers/cargo/: Containerfile
containers/cobol-toolchain/: Containerfile
containers/common-lisp-toolchain/: Containerfile
containers/cpp-toolchain/: Containerfile
containers/dart-toolchain/: Containerfile
containers/dotnet9/: Containerfile
containers/ghc-toolchain/: Containerfile
containers/go/: Containerfile
containers/java-toolchain/: Containerfile  prefetch-pom.xml
containers/kotlin-toolchain/: Containerfile
containers/lean-toolchain/: Containerfile
containers/node24/: Containerfile
containers/ocaml-toolchain/: Containerfile
containers/php-toolchain/: Containerfile
containers/prolog-toolchain/: Containerfile
containers/python-toolchain/: Containerfile
containers/ruby-toolchain/: Containerfile
containers/rust-toolchain/: Containerfile
containers/swift-toolchain/: Containerfile
containers/zig-toolchain/: Containerfile
ffi-generator/: README.md
ffi-generator/c-abi/: README.md
ffi-generator/c-abi/entity-core-codec-ffi-c/: .gitignore  CMakeLists.txt  README.md  export.map
ffi-generator/c-abi/entity-core-codec-ffi-c/include/: entitycore_codec.h
ffi-generator/c-abi/entity-core-codec-ffi-c/src/: base58.c  base58.h  codec.c  codec_core.h  conformance_harness.c  ecf.c  ecf.h  regression_test.c  sha384.c  sha384.h
ffi-generator/c-abi/entity-core-codec-ffi-c/src/ed448/: PROVENANCE.md  ec_shake256.c  ec_shake256.h  ed448_glue.c  ed448_glue.h
ffi-generator/c-abi/entity-core-codec-ffi-rust/: Cargo.toml  README.md
ffi-generator/c-abi/entity-core-codec-ffi-rust/src/: decode.rs  encode.rs  lib.rs  value.rs
ops/: README.md
protocol-generator/: README.md
protocol-generator/ada/: .gitignore  CHANGELOG.md  LICENSE  README.md  alire.toml  entity_core_protocol.gpr  profile.toml  run-origination-core.sh  run-s2.sh  run-s3.sh  run-s4.sh
protocol-generator/c/: .gitignore  CHANGELOG.md  LICENSE  Makefile  (+7 more)
protocol-generator/cpp/: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  profile.toml  run-origination-core.sh  run-s2.sh  run-s4.sh
protocol-generator/cpp/.github/workflows/: cpp.yml
protocol-generator/cpp/arch/: PROFILE-RATIONALE.md
protocol-generator/cpp/include/entity_core/: base58.hpp  capability.hpp  core_typedefs.hpp  crypto.hpp  ecf.hpp  entity.hpp  identity.hpp  peer.hpp  peer_identity.hpp  protocol.hpp  store.hpp  transport.hpp  varint.hpp  wire.hpp
protocol-generator/cpp/packaging/cmake/: EntityCoreProtocolConfig.cmake.in
protocol-generator/cpp/packaging/conan/: conanfile.py
protocol-generator/cpp/packaging/vcpkg/: portfile.cmake  vcpkg.json
protocol-generator/cpp/src/: base58.cpp  capability.cpp  core_typedefs.cpp  crypto.cpp  dispatch.cpp  ecf.cpp  entity.cpp  identity.cpp  peer_identity.cpp  store.cpp  transport.cpp  varint.cpp  wire.cpp
protocol-generator/cpp/status/: CONFORMANCE-REPORT.json  CONFORMANCE-REPORT.md  PHASE-S1.md  PHASE-S2.md  PHASE-S3.md  PHASE-S4.md  PHASE-S5.md  SPEC-AMBIGUITY-LOG.md
protocol-generator/cpp/test/: conformance.cpp  ffi_xcheck.cpp  host.cpp  multisig_accept.cpp  smoke.cpp  typereg.cpp
protocol-generator/cpp/tools/: gen-typedefs.py  oracle-pin.env
protocol-generator/ocaml/: CHANGELOG.md  README.md  entity-core-protocol-ocaml.opam  profile.toml  run-agility.sh  run-origination-core.sh  run-s4.sh
protocol-generator/ocaml/arch/: PROFILE-RATIONALE.md
protocol-generator/ocaml/src/: base58.ml  capability.ml  cbor.ml  dune  hash.ml  identity.ml  model.ml  peer.ml  peer_id.ml  sign.ml  store.ml  transport.ml  type_defs.ml  type_defs_data.ml  varint.ml  wire.ml
protocol-generator/ocaml/src/agility/: dune  ec_ffi.ml  ec_ffi_stubs.c  hash_formats.ml  key_types.ml  peer_identity.ml
protocol-generator/ocaml/status/: CONFORMANCE-REPORT.json  CONFORMANCE-REPORT.md  PHASE-S1.md  PHASE-S2.md  PHASE-S3.md  PHASE-S4.md  PHASE-S5.md  SPEC-AMBIGUITY-LOG.md
protocol-generator/ocaml/test/: agility.ml  conformance.ml  dune  selftest.ml  type_registry.ml
protocol-generator/ocaml/tools/: gen-typedefs.py
protocol-generator/python/: CHANGELOG.md  LICENSE  README.md  profile.toml  pyproject.toml  requirements.txt  run-origination-core.sh  run-s4.sh
protocol-generator/python/arch/: PROFILE-RATIONALE.md
protocol-generator/python/src/entity_core/: __init__.py  _base58.py  _cbor.py  _varint.py  content_hash.py  errors.py  host.py  peer_id.py  signature.py
protocol-generator/python/src/entity_core/peer/: __init__.py  capability.py  handlers.py  identity.py  model.py  peer.py  store.py  transport.py  typedefs.py  wire.py
protocol-generator/python/status/: CONFORMANCE-REPORT.json  CONFORMANCE-REPORT.md  PHASE-S1.md  PHASE-S2.md  PHASE-S3.md  PHASE-S4.md  PHASE-S5.md  SPEC-AMBIGUITY-LOG.md
protocol-generator/python/tests/conformance/: harness.py  test_wire_conformance.py
protocol-generator/python/tests/peer/: _run.py  test_loopback.py  test_multisig.py  test_type_registry.py
protocol-generator/rust/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  profile.toml  run-origination-core.sh  run-s4.sh
protocol-generator/rust/arch/: PROFILE-RATIONALE.md
protocol-generator/rust/src/: base58.rs  cbor.rs  content_hash.rs  error.rs  lib.rs  peer_id.rs  signature.rs  tests.rs  value.rs  varint.rs
protocol-generator/rust/src/peer/: capability.rs  core.rs  identity.rs  mod.rs  model.rs  store.rs  transport.rs  type_defs.rs  wire.rs
protocol-generator/rust/src/peer/capability/: tests.rs
protocol-generator/rust/status/: CONFORMANCE-REPORT.json  CONFORMANCE-REPORT.md  PHASE-S1.md  PHASE-S2.md  PHASE-S3.md  PHASE-S4.md  PHASE-S5.md  SPEC-AMBIGUITY-LOG.md  emit-rust.cbor
protocol-generator/rust/tests/: loopback.rs
research/: LANDSCAPE.md  README.md
tools/: oracle-bootstrap.sh  oracle-pin.env  podman-caps.sh
(+1014 files in other folders)
